Fix overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ section {
   position: relative;
   display: inline-block;
   top: 0;
-  width: 300px;
+  max-width: 300px;
+  width: 100%;
   height: 250px;
   color: rgba(245, 245, 245, 0.8); }
 
@@ -103,9 +104,9 @@ section {
 #phil-flanagan-logo .dots {
   position: absolute;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%) rotate(45deg);
-      -ms-transform: translate(-50%, -50%) rotate(45deg);
-          transform: translate(-50%, -50%) rotate(45deg);
+  -webkit-transform: translateY(-50%) rotate(45deg);
+      -ms-transform: translateY(-50%) rotate(45deg);
+          transform: translateY(-50%) rotate(45deg);
   width: 15px;
   height: 15px; }
   #phil-flanagan-logo .dots span {
@@ -140,7 +141,7 @@ section {
   font-size: 14pt;
   letter-spacing: 1px;
   text-align: center;
-  width: 270px;
+  width: 100%;
   height: 68px;
   line-height: 68px;
   border-top: 2px solid rgba(245, 245, 245, 0.8);
@@ -177,10 +178,10 @@ section {
           transform: translate(-50%, -50%); }
 
 #phil-flanagan-logo .dots.before {
-  left: 40px; }
+  left: 10%; }
 
 #phil-flanagan-logo .dots.after {
-  left: 260px; }
+  left: 85%; }
 
 .main-nav {
   z-index: 11;
@@ -370,6 +371,9 @@ label.nav-toggle, #nav-toggle-cbox {
     bottom: -45px; }
 
 .title-group {
+  max-width: 100vw;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 50px 10px;
   line-height: 1.2; }
   .title-group h1 {
@@ -398,6 +402,14 @@ label.nav-toggle, #nav-toggle-cbox {
     font-style: italic;
     color: rgba(0, 0, 0, 0.5);
     margin-top: -20pt; }
+
+@media (max-width: 768px) {
+  .title-group h1 {
+    font-size: 28pt; }
+    .title-group h1 small {
+      font-size: 20pt; }
+  .title-group h1 ~ h2 {
+    font-size: 14pt; } }
 
 #pf-skills {
   background-color: #d0d0d0;
