--- a/sass/sections/_splash.scss
+++ b/sass/sections/_splash.scss
@@ -20,6 +20,8 @@
 }
 
 .title-group {
+	max-width: 100vw;
+	box-sizing: border-box;
 	padding: 50px 10px;
 	line-height: 1.2;
 	h1 {
@@ -51,5 +53,19 @@
 		font-style: italic;
 		color: $halfdark;
 		margin-top: -20pt;
+	}
+}
+
+@media(max-width: 768px) {
+	.title-group {
+		h1 {
+			font-size: 28pt;
+			small {
+				font-size: 20pt;
+			}
+		}
+		h1 ~ h2 {
+			font-size: 14pt;
+		}
 	}
 }
